fixed the upper alignment of the sliders... still have extra space on the bottom though

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -52,8 +52,9 @@ html, body, .fluidContainer, .mainCol {
 }
 
 .slider { 
-    display: inline-block; 
-    margin-bottom:5px;
+  vertical-align: top;
+  display: inline-block; 
+  margin-bottom:5px;
 }
 .slider+.slider {
     /*margin-top:15px;*/
